Added analysis to WeatherPy

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1752,7 +1752,9 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1782,7 +1784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** These plots are modeling humidity as a function of latitude. There is no real model for this data, indicating that there is no relationship between the two. This is unsurprising as local geography/weather patterns are a bigger influence than latitude for humidity. "
    ]
   },
   {
@@ -1854,7 +1856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** These plots are modeling cloudiness % as a function of latitude. There is no real model for this data (r^2 is very low indicating a poor fit), indicating that there is no relationship between the two. This is unsurprising as local geography/weather patterns are a bigger influence than latitude for cloudiness. "
    ]
   },
   {
@@ -1926,7 +1928,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** These plots are modeling cloudiness % as a function of latitude. Again, there is no real model for this data (r^2 is very low indicating a poor fit), indicating that there is no relationship between the two. This is unsurprising as local geography/weather patterns are a bigger influence than latitude for wind speed. "
    ]
   }
  ],
